--- a/Dual_Hotel_EX3/Dual_Hotel_EX3.csproj
+++ b/Dual_Hotel_EX3/Dual_Hotel_EX3.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Model\Client.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\TemporadaRepository.cs" />
     <Compile Include="Model\ClientsRepository.cs" />
     <Compile Include="Model\Habitacio.cs">
       <DependentUpon>Model1.tt</DependentUpon>
