--- a/Dual_Hotel_EX3/Dual_Hotel_EX3.csproj
+++ b/Dual_Hotel_EX3/Dual_Hotel_EX3.csproj
@@ -65,18 +65,17 @@
     <Compile Include="Controller\CommonController.cs" />
     <Compile Include="Controller\HostesController.cs" />
     <Compile Include="Controller\MainController.cs" />
+    <Compile Include="Controller\TemporadesController.cs" />
     <Compile Include="Model\Client.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\TemporadaRepository.cs" />
-    <Compile Include="Model\ClientsRepository.cs" />
     <Compile Include="Model\Habitacio.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\Hoste.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\HosteRepository.cs" />
+    <Compile Include="Model\TipusHabitacioRepository.cs" />
     <Compile Include="Model\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -110,9 +109,15 @@
     <Compile Include="Model\Servei.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\sysdiagram.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Temporada.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\TemporadaRepository.cs" />
+    <Compile Include="Model\ClientsRepository.cs" />
+    <Compile Include="Model\HosteRepository.cs" />
     <Compile Include="Model\TipusHabitacio.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -152,6 +157,12 @@
     <Compile Include="View\AfegirTemporada.Designer.cs">
       <DependentUpon>AfegirTemporada.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\AfegirTipusHabitacio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AfegirTipusHabitacio.Designer.cs">
+      <DependentUpon>AfegirTipusHabitacio.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Clients.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -178,6 +189,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Temporades.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Temporades.Designer.cs">
+      <DependentUpon>Temporades.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\AfegirClient.resx">
       <DependentUpon>AfegirClient.cs</DependentUpon>
     </EmbeddedResource>
@@ -195,6 +212,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\AfegirTemporada.resx">
       <DependentUpon>AfegirTemporada.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AfegirTipusHabitacio.resx">
+      <DependentUpon>AfegirTipusHabitacio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Clients.resx">
       <DependentUpon>Clients.cs</DependentUpon>
@@ -217,6 +237,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\Temporades.resx">
+      <DependentUpon>Temporades.cs</DependentUpon>
+    </EmbeddedResource>
     <EntityDeploy Include="Model\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
