--- a/Dual_Hotel_EX3/Dual_Hotel_EX3.csproj
+++ b/Dual_Hotel_EX3/Dual_Hotel_EX3.csproj
@@ -68,15 +68,12 @@
     <Compile Include="Model\Client.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\TemporadaRepository.cs" />
-    <Compile Include="Model\ClientsRepository.cs" />
     <Compile Include="Model\Habitacio.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\Hoste.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\HosteRepository.cs" />
     <Compile Include="Model\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -110,9 +107,15 @@
     <Compile Include="Model\Servei.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\sysdiagram.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Temporada.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\TemporadaRepository.cs" />
+    <Compile Include="Model\ClientsRepository.cs" />
+    <Compile Include="Model\HosteRepository.cs" />
     <Compile Include="Model\TipusHabitacio.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
