--- a/Dual_Hotel_EX3/Dual_Hotel_EX3.csproj
+++ b/Dual_Hotel_EX3/Dual_Hotel_EX3.csproj
@@ -152,6 +152,12 @@
     <Compile Include="View\AfegirPlanta.Designer.cs">
       <DependentUpon>AfegirPlanta.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\AfegirServeiPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AfegirServeiPopup.Designer.cs">
+      <DependentUpon>AfegirServeiPopup.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\AfegirTemporada.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -210,6 +216,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\AfegirPlanta.resx">
       <DependentUpon>AfegirPlanta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AfegirServeiPopup.resx">
+      <DependentUpon>AfegirServeiPopup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\AfegirTemporada.resx">
       <DependentUpon>AfegirTemporada.cs</DependentUpon>
